tests/component_type/get_set_elem.js
//@flow

declare const x: component(ref: React.RefSetter<any>, ...any);
declare const y: string;
x[y]; // error
x[y] = y; // error: no indexed type
